# intelligence/models/__init__.py
@@ -1,0 +1,1 @@
+"""ML models for anomaly detection."""
